--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,4 @@
-<h1>Lista de Categorias</h1>
+<h1>Lista de Categorias:</h1>
 <hr>
-<button href=""> </button>
+<i class="bi bi-arrow-down-circle"></i>
+<a href="/admin/categorias/add"> <button type="button" class="btn btn btn-success">Adicionar</button></a>
