--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -2,3 +2,27 @@
 <hr>
 <i class="bi bi-arrow-down-circle"></i>
 <a href="/admin/categorias/add"> <button type="button" class="btn btn btn-success">Adicionar</button></a>
+{{#each cate}}
+
+  <div class="card mt-4">
+    <div class="card-body">
+      <h4>{{name}}</h4>
+      <small>Slug: {{slug}}</small><br>
+      <small>Data: {{date}}</small><br>
+      <a href="/admin/categorias/edit/{{_id}}"><button type="button" class="btn btn-success mt-2"> Editar </button></a><br>
+              
+              <form action="/admin/categorias/deletar" method="post" id="categoria">
+                <input type="hidden" value="{{_id}}" name="id" form="categoria"><button type="submit" class="btn btn-outline-danger mt-2" >
+                  Excluir
+                </button></form>
+   
+          
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+  </div>
+{{else}}
+<h4 class="alert alert-primary mt-4 d-flex justify-content-center">Nenhuma categoria registrada</h4>
+{{/each}}
