--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,4 +1,8 @@
+<link rel="stylesheet" href="/404.css">
+<div id="centralizar">
+  <h1 id="nome">404</h1>
+  <hr id="linha">
+  <p>Pagina não encontrada</p
+</div>
 
-<h1 id="jjj">404</h1>
-<p>Pagina não encontrada</p
 
