--- a/views/usuario/login.handlebars
+++ b/views/usuario/login.handlebars
@@ -7,10 +7,9 @@
 {{/each}}
 
 <h3>Login: </h3>
-<div id="fundo">
 <div class="card shadow-sm">
   <div class="card-body">
-    <form action="registro" method="post">
+    <form action="/usuario/login" method="post">
       <div class="form-floating mt-4 mb-4">      
       <input type="email" name="email" class="form-control" placeholder="name@example.com">
       <label for="email">Email</label>
@@ -23,5 +22,4 @@
       
     </form>
   </div>
-</div>
 </div>
