--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,12 +12,18 @@
         <li class="nav-item">
           <a class="nav-link" href="/categorias">Categorias</a>
         </li>
+        {{#if user}}
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="/usuario/logout">Sair</a>
+        </li>
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/usuario/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Registro</a>
+          <a class="nav-link" href="/usuario/registro">Registro</a>
         </li>
+        {{/if}}
       </ul>
     
     </div>
