--- a/views/usuario/registro.handlebars
+++ b/views/usuario/registro.handlebars
@@ -27,9 +27,11 @@
         <input type="password" name="senha2" class="form-control" placeholder="Password">
         <label for="senha2">Repita sua senha</label>
        </div>
-       <button type="submit" class="btn btn-success">Criar conta</button>
-      
-    </form>
+       <a href="/usuario/login"><button type="button" class="btn btn-success">Login</button></a>
+       <button type="submit" class="btn btn-success">Registra</button>
+
+    </form>      
+
   </div>
 </div>
 </div>
