--- a/views/usuario/login.handlebars
+++ b/views/usuario/login.handlebars
@@ -18,6 +18,7 @@
         <input type="password" name="senha" class="form-control" placeholder="Password">
         <label for="senha">Senha</label>
        </div>
+       <a href="/usuario/registro"><button type="button" class="btn btn-success">Registrar</button></a>
        <button type="submit" class="btn btn-success">Login</button>
       
     </form>
