--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
   <h1>Bem vindo ao blog do NodeJs</h1>
     <p>Veja notícias sobre progamacao, site feito com: Nodejs, express e mongodb
     </p>
-    <button class="btn btn-primary shadow-sm">Crie uma conta</button>
+    <a href="/usuario/registro"><button class="btn btn-primary shadow-sm">Crie uma conta</button></a>
 </div>
 {{#if post}}
 <h2>Postagens recentes: </h2>
